2010-03-25  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=33697
        Have dragOpFromIEOp("move") return DragOperationGeneric | DragOperationMove
        because only returning Generic doesn't work for platforms that don't
        have a generic operation.

        Covered by existing tests (fast/events/drag-and-drop.html).

        * dom/Clipboard.cpp:
        (WebCore::dragOpFromIEOp):
        (WebCore::Clipboard::destinationOperation):
        (WebCore::Clipboard::setDestinationOperation):

Canonical link: https://commits.webkit.org/47807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56513 268f45cc-cd09-0410-ab3c-d52691b4dbfc